--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "5.3.3",
+    "classnames": "^2.5.1",
     "play-color": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
