--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.26.1",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
